--- a/lab/lab1/Lab1Task2.ipynb
+++ b/lab/lab1/Lab1Task2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "10cf523e",
    "metadata": {},
    "outputs": [
@@ -10,47 +10,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите размер матрицы по горизонтали: 10\n",
-      "Введите размер матрицы по вертикали: 10\n",
-      "Введите минимальное случайное число в матрице: 9\n",
-      "Введите максимальное случайное число в матрице: 123\n",
-      "121,58,93,37,44,115,109,106,84,44,9,19,46,38,39,21,59,25,36,117,99,92,85,13,24,96,21,55,117,23,43,84,47,68,120,95,107,47,70,118,113,47,72,14,65,37,13,44,17,121,116,16,115,109,49,65,109,102,85,25,121,23,66,26,76,65,38,10,90,109,47,21,118,77,39,49,34,39,26,118,123,50,70,39,40,82,120,86,11,91,70,59,56,56,87,105,53,44,52,64,"
+      "Введите размер матрицы по горизонтали: 5\n",
+      "Введите размер матрицы по вертикали: 7\n",
+      "Введите минимальное случайное число в матрице: 1\n",
+      "Введите максимальное случайное число в матрице: 99\n",
+      "  67  23  18  84  32\n",
+      "  54  41  59   6  25\n",
+      "  88  65  20  63  40\n",
+      "  23  83  56  55   9\n",
+      "  60  35  60  91  31\n",
+      "  47  43  26  66  28\n",
+      "  91  47   7  20  98\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
+    "from random import randint\n",
     "from __future__ import print_function\n",
-    "print (\"Введите размер матрицы по горизонтали: \", end=\"\")\n",
-    "m = int(input());\n",
-    "print (\"Введите размер матрицы по вертикали: \", end=\"\")\n",
-    "n = int(input());\n",
-    "print (\"Введите минимальное случайное число в матрице: \", end=\"\")\n",
-    "min_limit = int(input());\n",
-    "print (\"Введите максимальное случайное число в матрице: \", end=\"\")\n",
-    "max_limit = int(input());\n",
+    "\n",
+    "def printMatrix (a): \n",
+    "   for i in range (n): \n",
+    "      for j in range (m): \n",
+    "          print ( \"{:4d}\".format(a[i][j]), end = \"\" ) \n",
+    "      print ()\n",
+    "\n",
+    "m = int(input(\"Введите размер матрицы по горизонтали: \"));\n",
+    "n = int(input(\"Введите размер матрицы по вертикали: \"));\n",
+    "min_limit = int(input(\"Введите минимальное случайное число в матрице: \"));\n",
+    "max_limit = int(input(\"Введите максимальное случайное число в матрице: \"));\n",
     "a = [];\n",
-    "a = [[randint(min_limit, max_limit) for i in range(n)] for j in range(m)]\n",
     "for i in range(n):\n",
-    "    for j in range(m):\n",
-    "        print(a[i][j], end = ',')"
+    "    a.append([])\n",
+    "    for j in range (m):\n",
+    "        a[i].append(random.randint(min_limit, max_limit))\n",
+    "\n",
+    "printMatrix (a)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f67ef245",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ec5cfaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
