--- a/lab/lab1/Lab1.ipynb
+++ b/lab/lab1/Lab1.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "id": "built-contact",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "id": "alert-charm",
    "metadata": {
     "scrolled": true
@@ -81,16 +81,16 @@
       "Введите ширину матрицы: 10\n",
       "Введите длину матрицы: 9\n",
       "Введите минимальный элемент матрицы: 9\n",
-      "Введите максимальный элемент матрицы: 199\n",
-      "  40  15  99  25 144 194  96  32 125  50\n",
-      " 117  21  99 118  97 164 192 122  87  42\n",
-      "  50 115 116 142  85 133 185 178 136 184\n",
-      " 138  10  14 162 139  91 141  26  56 139\n",
-      "  37  27  54 190 100 188 152 112 100 174\n",
-      "  27 166 126 146 100  42  92  23 151 157\n",
-      " 140  99  25 169 119  74 189 155 103 101\n",
-      " 137 123  21 123 193 101 141 121 137  17\n",
-      "  57  29 155 195  62 150 169   9 141  21\n"
+      "Введите максимальный элемент матрицы: 156\n",
+      "  16 156 115 139 120  97  90 104  81 144\n",
+      "  54  97 144  65 122  91  18  51  48  96\n",
+      " 141  20 140  16  36 107 132  53  22  26\n",
+      " 139 102  49 145 115  70  33 139  17 109\n",
+      " 156  75  37  73  67 107  67  87 140 122\n",
+      " 116  60  68 123 156  60  43 129  44  86\n",
+      "  65 139  94  53 129  44  22  82 123  21\n",
+      "  82  80  75  43  76  28  90  67  96 115\n",
+      "  22   9 132  62  22  33 117 100   9 149\n"
      ]
     }
    ],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "id": "opposed-creature",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "id": "cleared-anniversary",
    "metadata": {
     "scrolled": true
@@ -142,16 +142,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.164100 ms ---\n",
-      "   9  21  29  57  62 141 150 155 169 195\n",
-      "  10  14  26  56  91 138 139 139 141 162\n",
-      "  15  25  32  40  50  96  99 125 144 194\n",
-      "  17  21 101 121 123 123 137 137 141 193\n",
-      "  21  42  87  97  99 117 118 122 164 192\n",
-      "  23  27  42  92 100 126 146 151 157 166\n",
-      "  25  74  99 101 103 119 140 155 169 189\n",
-      "  27  37  54 100 100 112 152 174 188 190\n",
-      "  50  85 115 116 133 136 142 178 184 185\n"
+      "--- 0.160200 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "id": "roman-silly",
    "metadata": {
     "scrolled": true
@@ -192,16 +192,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.100900 ms ---\n",
-      "   9  21  29  57  62 141 150 155 169 195\n",
-      "  10  14  26  56  91 138 139 139 141 162\n",
-      "  15  25  32  40  50  96  99 125 144 194\n",
-      "  17  21 101 121 123 123 137 137 141 193\n",
-      "  21  42  87  97  99 117 118 122 164 192\n",
-      "  23  27  42  92 100 126 146 151 157 166\n",
-      "  25  74  99 101 103 119 140 155 169 189\n",
-      "  27  37  54 100 100 112 152 174 188 190\n",
-      "  50  85 115 116 133 136 142 178 184 185\n"
+      "--- 0.112600 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "id": "vital-implementation",
    "metadata": {},
    "outputs": [
@@ -241,16 +241,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.157900 ms ---\n",
-      "   9  21  29  57  62 141 150 155 169 195\n",
-      "  10  14  26  56  91 138 139 139 141 162\n",
-      "  15  25  32  40  50  96  99 125 144 194\n",
-      "  17  21 101 121 123 123 137 137 141 193\n",
-      "  21  42  87  97  99 117 118 122 164 192\n",
-      "  23  27  42  92 100 126 146 151 157 166\n",
-      "  25  74  99 101 103 119 140 155 169 189\n",
-      "  27  37  54 100 100 112 152 174 188 190\n",
-      "  50  85 115 116 133 136 142 178 184 185\n"
+      "--- 0.371200 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "id": "veterinary-glory",
    "metadata": {},
    "outputs": [
@@ -285,16 +285,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.130800 ms ---\n",
-      "   9  21  29  57  62 141 150 155 169 195\n",
-      "  10  14  26  56  91 138 139 139 141 162\n",
-      "  15  25  32  40  50  96  99 125 144 194\n",
-      "  17  21 101 121 123 123 137 137 141 193\n",
-      "  21  42  87  97  99 117 118 122 164 192\n",
-      "  23  27  42  92 100 126 146 151 157 166\n",
-      "  25  74  99 101 103 119 140 155 169 189\n",
-      "  27  37  54 100 100 112 152 174 188 190\n",
-      "  50  85 115 116 133 136 142 178 184 185\n"
+      "--- 0.300900 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
      ]
     }
    ],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "id": "correct-chaos",
    "metadata": {
     "scrolled": true
@@ -337,16 +337,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.188600 ms ---\n",
-      "   9  21  29  57  62 141 150 155 169 195\n",
-      "  10  14  26  56  91 138 139 139 141 162\n",
-      "  15  25  32  40  50  96  99 125 144 194\n",
-      "  17  21 101 121 123 123 137 137 141 193\n",
-      "  21  42  87  97  99 117 118 122 164 192\n",
-      "  23  27  42  92 100 126 146 151 157 166\n",
-      "  25  74  99 101 103 119 140 155 169 189\n",
-      "  27  37  54 100 100 112 152 174 188 190\n",
-      "  50  85 115 116 133 136 142 178 184 185\n"
+      "--- 0.161000 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
      ]
     }
    ],
@@ -385,26 +385,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "id": "french-czech",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- 0.218000 ms ---\n",
-      "   9  21  29  57  62 141 150 155 169 195\n",
-      "  10  14  26  56  91 138 139 139 141 162\n",
-      "  15  25  32  40  50  96  99 125 144 194\n",
-      "  17  21 101 121 123 123 137 137 141 193\n",
-      "  21  42  87  97  99 117 118 122 164 192\n",
-      "  23  27  42  92 100 126 146 151 157 166\n",
-      "  25  74  99 101 103 119 140 155 169 189\n",
-      "  27  37  54 100 100 112 152 174 188 190\n",
-      "  50  85 115 116 133 136 142 178 184 185\n"
+      "--- 0.124600 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
      ]
     }
    ],
@@ -430,6 +430,42 @@
     "\n",
     "print(\"--- {:.6f} ms ---\".format((time.perf_counter() - start_time) * 1000))\n",
     "printMatrix(matrix)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e17f8d8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- 0.103600 ms ---\n",
+      "   9   9  22  22  33  62 100 117 132 149\n",
+      "  16  20  22  26  36  53 107 132 140 141\n",
+      "  16  81  90  97 104 115 120 139 144 156\n",
+      "  17  33  49  70 102 109 115 139 139 145\n",
+      "  18  48  51  54  65  91  96  97 122 144\n",
+      "  21  22  44  53  65  82  94 123 129 139\n",
+      "  28  43  67  75  76  80  82  90  96 115\n",
+      "  37  67  67  73  75  87 107 122 140 156\n",
+      "  43  44  60  60  68  86 116 123 129 156\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Сортировка с использованием стандартной функции сортировки\n",
+    "matrix = deepcopy(matrix)\n",
+    "start_time = time.perf_counter()\n",
+    "\n",
+    "for row in matrix:\n",
+    "    row.sort()\n",
+    "    \n",
+    "matrix.sort()\n",
+    "print(\"--- {:.6f} ms ---\".format((time.perf_counter() - start_time) * 1000))\n",
+    "printMatrix(matrix)"
    ]
   },
   {
