--- a/Tasks/Tasks1.ipynb
+++ b/Tasks/Tasks1.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "be07379d",
    "metadata": {
     "scrolled": true
@@ -251,29 +251,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите строку: aabb\n",
+      "Введите строчку: aabb\n",
       "2\n"
      ]
     }
    ],
    "source": [
-    "a = str(input(\"Введите строку: \"))\n",
-    "x = 0\n",
+    "def concat(sub:str):\n",
+    "    return sub[:len(sub)//2] == sub[len(sub)//2:]\n",
     "\n",
-    "for i in range (len(a) - 1):\n",
-    "    if a[i] == a[i+1]:\n",
-    "        x = x + 1\n",
-    "        \n",
-    "print(x)"
+    "def repetitions(s1:str):\n",
+    "    count = 0\n",
+    "    for i in range(1, len(s1) + 1):\n",
+    "        for j in range (len(s1) - i + 1):\n",
+    "            if concat(s1[j:j+i]):\n",
+    "                count += 1\n",
+    "    return count\n",
+    "\n",
+    "print(repetitions(input(\"Введите строчку: \")))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33c9e837",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
