--- a/Tasks/Tasks1.ipynb
+++ b/Tasks/Tasks1.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "3b0d440a",
    "metadata": {},
    "outputs": [
@@ -65,37 +65,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Введите строку 1 - abc\n",
-      "Введите строку 2 - xya\n",
+      "abc\n",
+      "xya\n",
       "True\n"
      ]
     }
    ],
    "source": [
-    "s1 = str(input(\"Введите строку 1 - \"))\n",
-    "s2 = str(input(\"Введите строку 2 - \"))\n",
-    "alf = ' abcdefghijklmnopqrstuvwxyz '\n",
-    "count1 = 0\n",
-    "count2 = 0\n",
+    "def compareStrings(s1:str, s2:str):\n",
+    "    s1 = sorted(s1, reverse=True)\n",
+    "    s2 = sorted(s2, reverse=True)\n",
     "\n",
-    "for i in range (len(s1)):\n",
-    "    for k in range (len(alf)):\n",
-    "        if s1[i] == alf[k]:\n",
-    "            count1 = count1 + k\n",
-    "        k = k + 1\n",
-    "    i = i + 1\n",
-    "    \n",
-    "for i in range (len(s2)):\n",
-    "    for k in range (len(alf)):\n",
-    "        if s2[i] == alf[k]:\n",
-    "            count2 = count2 + k\n",
-    "        k = k + 1\n",
-    "    i = i + 1\n",
+    "    if s1 >= s2:\n",
+    "        main, sub = s1, s2\n",
+    "    else:\n",
+    "        main, sub = s2, s1\n",
     "\n",
-    "if (count1  >= count2) or (count1 <= count2):\n",
-    "    print(\"True\")\n",
-    "else:\n",
-    "    print(\"False\")"
+    "    for i in range(len(main)) :\n",
+    "        if (main[i] >= sub[i]):\n",
+    "            continue\n",
+    "        return False\n",
+    "    return True\n",
+    "\n",
+    "print(compareStrings(input(),input()))"
    ]
   },
   {
