--- a/labs/Lab4.ipynb
+++ b/labs/Lab4.ipynb
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "id": "9e91a9d4",
    "metadata": {},
    "outputs": [
@@ -198,9 +198,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[1, 2, 3]\n",
       "[]\n",
       "[]\n",
-      "[1, 2, 3, 4, 5, 6, 7]\n"
+      "/n-----------\n",
+      "[1, 2]\n",
+      "[]\n",
+      "[3]\n",
+      "/n-----------\n",
+      "[1]\n",
+      "[2]\n",
+      "[3]\n",
+      "/n-----------\n",
+      "[1]\n",
+      "[2, 3]\n",
+      "[]\n",
+      "/n-----------\n",
+      "[1]\n",
+      "[2, 3]\n",
+      "[]\n",
+      "/n-----------\n",
+      "[]\n",
+      "[2, 3]\n",
+      "[1]\n",
+      "/n-----------\n",
+      "[3]\n",
+      "[2]\n",
+      "[1]\n",
+      "/n-----------\n",
+      "[3]\n",
+      "[]\n",
+      "[1, 2]\n",
+      "/n-----------\n",
+      "[]\n",
+      "[]\n",
+      "[1, 2, 3]\n",
+      "/n-----------\n",
+      "[]\n",
+      "[]\n",
+      "[1, 2, 3]\n",
+      "/n-----------\n",
+      "[]\n",
+      "[]\n",
+      "[1, 2, 3]\n",
+      "/n-----------\n"
      ]
     }
    ],
@@ -208,7 +249,7 @@
     "from typing import TypeVar, Generic, List\n",
     "T = TypeVar('T')\n",
     "\n",
-    "class Stack(Generic[T]):\n",
+    "class Stack3(Generic[T]):\n",
     "\n",
     "    def __init__(self) -> None:\n",
     "        self._container: List[T] = []\n",
@@ -219,26 +260,37 @@
     "    def pop(self) -> T:\n",
     "          return self._container.pop()\n",
     "\n",
-    "    def __repr__(self) -> str:\n",
+    "    def __repr__(self) -> str: #что внутри стека\n",
     "          return repr(self._container)\n",
-    "num_discs: int = 7\n",
-    "tower_a: Stack[int] = Stack()\n",
-    "tower_b: Stack[int] = Stack()\n",
-    "tower_c: Stack[int] = Stack()\n",
+    "num_discs: int = 3\n",
+    "tower_a: Stack3[int] = Stack3()\n",
+    "tower_b: Stack3[int] = Stack3()\n",
+    "tower_c: Stack3[int] = Stack3()\n",
+    "\n",
     "for i in range(1, num_discs + 1):\n",
     "     tower_a.push(i)\n",
-    "def hanoi(begin: Stack[int], end: Stack[int], temp: Stack[int], n: int) ->None:\n",
+    "print(tower_a)\n",
+    "print(tower_b)\n",
+    "print(tower_c)\n",
+    "print('/n-----------')\n",
+    "def hanoi(begin: Stack3[int], end: Stack3[int], temp: Stack3[int], n: int) ->None:\n",
     "    if n == 1:\n",
     "        end.push(begin.pop())\n",
+    "        print(tower_a)\n",
+    "        print(tower_b)\n",
+    "        print(tower_c)\n",
+    "        print('/n-----------')\n",
     "    else:\n",
     "        hanoi(begin, temp, end, n-1)\n",
     "        hanoi(begin, end, temp, 1)\n",
     "        hanoi(temp, end, begin, n-1)\n",
-    "if __name__ == \"__main__\":\n",
-    "    hanoi(tower_a, tower_c, tower_b, num_discs)\n",
-    "    print(tower_a)\n",
-    "    print(tower_b)\n",
-    "    print(tower_c)"
+    "        print(tower_a)\n",
+    "        print(tower_b)\n",
+    "        print(tower_c)\n",
+    "        print('/n-----------')\n",
+    "        \n",
+    "\n",
+    "hanoi(tower_a, tower_c, tower_b, num_discs)"
    ]
   },
   {
@@ -652,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699ff702",
+   "id": "4f16ee13",
    "metadata": {},
    "outputs": [],
    "source": []
