--- a/labs/Lab4.ipynb
+++ b/labs/Lab4.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 40,
    "id": "81cab7a8",
    "metadata": {},
    "outputs": [
@@ -158,20 +158,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['т', 'е', 'в', 'и', 'р', 'п']\n"
+      "lohel\n",
+      "hollohellohel\n"
      ]
     }
    ],
    "source": [
     "file = open('text2.txt', 'r')\n",
-    "str = 'иветпр' \n",
-    "d = Deque()\n",
-    "for i in range (len(str)-2,len(str)+len(str)-2,1):\n",
-    "    if (i<len(str)):\n",
-    "        d.addRear(str[i])\n",
+    "shifr = file.read()\n",
+    "\n",
+    "deq = Deque()\n",
+    "\n",
+    "for symbol in range (len(shifr)-2, len(shifr) + len(shifr)-2, 1):\n",
+    "    if symbol < len(shifr):\n",
+    "        deq.addRear(shifr)\n",
     "    else:\n",
-    "        d.addRear(str[i-len(str)])\n",
-    "print(d.items)\n",
+    "        deq.addRear(shifr[symbol-len(shifr)])\n",
+    "\n",
+    "res = ''\n",
+    "\n",
+    "while not deq.isEmpty():\n",
+    "    res += deq.removeRear()\n",
+    "\n",
+    "print(shifr)\n",
+    "print(res)\n",
+    "\n",
     "file.close()"
    ]
   },
@@ -704,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f16ee13",
+   "id": "16b902ea",
    "metadata": {},
    "outputs": [],
    "source": []
