--- a/labs/Станолевич Владислав Курсовая Работа Вариант 2.ipynb
+++ b/labs/Станолевич Владислав Курсовая Работа Вариант 2.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -443,38 +443,48 @@
    "source": [
     "#Задача 1\n",
     "\n",
+    "def sumOfDigits(n):                         #счётчик суммы цифр\n",
+    "    res = 0\n",
+    "    while n > 0:\n",
+    "        res = res + n % 10\n",
+    "        n = n // 10\n",
+    "        \n",
+    "    return res\n",
+    "\n",
     "t = int(input())\n",
+    "assert 1 < t < 2*10**4, \"Введено недопустимое значение\"\n",
     "\n",
     "for i in range(t):\n",
     "    n, s = list(map(int, input().split()))   #Ввод n и s в одну строку\n",
     "    ans = []                                 #Массив для ответа\n",
+    "\n",
+    "    assert 1 < n < 10**18, \"Введено недопустимое значение\"\n",
+    "    assert 1 < s < 16**2, \"Введено недопустимое значение\"\n",
     "    \n",
-    "    while sum(n) > s:                     \n",
-    "        if n % 10 != 0:                      #Если последняя цифра n не равна нулю, мы добавляем в начало ответа число ходов\n",
-    "            ans.insert(0, str(10 - n%10))    #нужное для увеличения на 10\n",
-    "            n = n//10 + 1                    #Заменяем разряд n единичкой\n",
+    "    while sumOfDigits(n) > s:                     \n",
+    "        if n % 10 != 0:                      #пробуем выставить последнюю цифру в ноль \n",
+    "            ans.insert(0, str(10 - n%10))    #если n не подходит, выставляем предпоследнюю и т.д.\n",
+    "            n = n//10 + 1                    \n",
     "        else:\n",
-    "            ans.insert(0, str(0))            #А если нет, добавляем в начало ноль и уменьшаем n на разряд \n",
+    "            ans.insert(0, str(0))            #если перевалили за требуемое значение, сокращаем на 10\n",
     "            n = n//10\n",
     "    \n",
-    "    if len(ans) == 0:                        \n",
+    "    if len(ans) == 0:                        #если изменения в массиве ответа не произошли, значит число изначально подходило\n",
     "        print(0)\n",
     "        \n",
-    "    print(''.join(ans))"
+    "    print(''.join(ans))                      #преобразование списка в строку, чтобы красиво выводилось"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "95831\n",
-      "3\n",
+      "2\n",
       "100120013\n",
       "5\n",
       "252525252525\n",
@@ -485,40 +495,34 @@
    "source": [
     "#Задача 2\n",
     "\n",
-    "from collections import Counter\n",
-    "\n",
-    "def goodLine(s, a, b):\n",
-    "    c = 0\n",
-    "    \n",
-    "    for i in s:                  #условие для хорошей строки - каждый 1 и 3 символ - равны, каждый 2 и 4 символ - равны, и т.д.\n",
-    "        if i == a:\n",
-    "            a, b = b, a\n",
-    "            c = c + 1\n",
-    "            \n",
-    "    if c%2 != 0:                  #если длина строки нечётная - все символы условия должны быть равны между собой\n",
-    "        c = c - 1                 #иначе все символы на четных позициях должны быть равны, \n",
-    "                                  #и все символы на нечетных позициях должны быть равны\n",
-    "    return c\n",
-    "\n",
     "t = int(input())\n",
+    "assert 1 < t < 1000, \"Введено недопустимое значение\"\n",
     "\n",
     "for i in range(t):\n",
-    "    s = list(input())\n",
-    "    l = len(s)\n",
-    "    maxx =- 1\n",
-    "    for k in range(10):                     #существует всего 10 типов таких символов, и мы их перебираем\n",
-    "        for j in range(10):                 #для каждой комбинации набирается подпоследовательность s,\n",
-    "            if k == j:                      #начинающаяся с этих двух символов\n",
-    "                x = s.count(str(k))\n",
-    "            else:\n",
-    "                x = goodLine(s, str(k), str(j))\n",
-    "            maxx = max(maxx,x)\n",
-    "    print(l - maxx)\n"
+    "    s = int(input())\n",
+    "    assert 2 < n < 2*10**5, \"Введено недопустимое значение\"\n",
+    "    \n",
+    "    ss = []\n",
+    "    while s > 0:                   #переделываем s в массив после проверки\n",
+    "        ss.append(s % 10)\n",
+    "        s //= 10\n",
+    "    ss.reverse()\n",
+    "\n",
+    "    ans = 0                        #счётчик плохих чисел в хорошей строке\n",
+    "\n",
+    "    for i in range (2, len(ss)-2):                            #подстрока может считаться хорошей только, если в ней одинаковые \n",
+    "        if (ss[i] != ss[i-2]) and (ss[i+1] != ss[i+2]):       #чётные и нечётные элементы, мы их сравниваем, если какие то \n",
+    "            ans = ans + 1                                     #элементы не проходят сравнение - они лишние, и мы увеличиваем\n",
+    "                                                              #счётчик\n",
+    "    if ans == 0:\n",
+    "        print(\"0\")\n",
+    "    else:\n",
+    "        print(len(ss) - ans)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -528,20 +532,16 @@
       "4\n",
       "4\n",
       "0011\n",
-      "2\n",
-      "1 2 1 2\n",
+      "(2, [1, 2, 1, 2])\n",
       "6\n",
       "111111\n",
+      "(6, [1, 2, 3, 4, 5, 6])\n",
       "6\n",
-      "1 2 3 4 5 6\n",
+      "123456\n",
+      "(6, [1, 2, 3, 4, 5, 6])\n",
       "5\n",
       "10101\n",
-      "1\n",
-      "1 1 1 1 1\n",
-      "8\n",
-      "01010000\n",
-      "4\n",
-      "1 1 1 1 1 2 3 4\n"
+      "(1, [1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -554,7 +554,7 @@
     "    ans = [1]                                #Массив номеров подпоследовательностей, относительно цифр в s\n",
     "    \n",
     "    if s[0] == \"0\":\n",
-    "        cur[0].add(0)                        #заносим первый элемент в соответствующее множество \n",
+    "        cur[0].add(0)                        #заносим элемент в соответствующее множество \n",
     "    else:\n",
     "        cur[1].add(0)\n",
     "        \n",
@@ -575,16 +575,21 @@
     "            else:\n",
     "                cur[1].add(used - 1)\n",
     "                \n",
-    "    print(used)\n",
-    "    print(*ans)\n",
+    "    return(used, ans)\n",
     "\n",
     "t = int(input())\n",
+    "assert 1 <= t <= 2*10**4, \"Введено недопустимое значение\"\n",
     "\n",
     "for i in range(t):\n",
+    "        \n",
     "    n = int(input())\n",
     "    s = input()\n",
+    "    \n",
+    "    if (n < 1 or n > 2*105):\n",
+    "        print(\"Некорректные данные!\")\n",
+    "        break\n",
     "\n",
-    "    solve(s, n)\n"
+    "    print(solve(s, n))\n"
    ]
   },
   {
@@ -612,7 +617,11 @@
     "t = int(input()) \n",
     "\n",
     "for i in range(t):\n",
+    "    assert 1 <= t <= 100, \"Введено недопустимое значение\"\n",
+    "    \n",
     "    n = int(input())\n",
+    "    assert 1 <= n <= 2*10**5, \"Введено недопустимое значение\"\n",
+    "        \n",
     "    arr = list(map(int, input().split()))\n",
     "    arrSort = sorted(arr)\n",
     "    count = 0                                              #счётчик элементов подпоследовательности \n",
@@ -664,7 +673,7 @@
    "source": [
     "#Задача 5\n",
     "\n",
-    "def goodStr(s, n, c):                         #определяет минимальное кол-во изменений, требуемое для создания хорошей строки\n",
+    "def goodLine(s, n, c):                         #определяет минимальное кол-во изменений, требуемое для создания хорошей строки\n",
     "    if n == 1:\n",
     "        if s[0] != c:                          \n",
     "            return 1                          #1-e условие\n",
@@ -680,21 +689,25 @@
     "    r2 = (s2.count(c))\n",
     "    \n",
     "    secondCon = mid - l1 + goodStr(s2,n // 2,chr(ord(c) + 1))          #2-е условие\n",
-    "    thirdCon = mid - r2 + goodStr(s1,n // 2,chr(ord(c) + 1))          #3-е условие\n",
+    "    thirdCon = mid - r2 + goodStr(s1,n // 2,chr(ord(c) + 1))           #3-е условие\n",
     "    return(min(secondCon,thirdCon))\n",
     "    \n",
     "t = int(input())\n",
     "\n",
     "for i in range(t):\n",
+    "    assert 1 < t <= 1000, \"Введено недопустимое значение\"\n",
+    "        \n",
     "    n = int(input())\n",
+    "    assert 1 < n <= 131072, \"Введено недопустимое значение\"\n",
+    "        \n",
     "    s = input()\n",
-    "    print(goodStr(s, n, 'a'))\n",
+    "    print(goodLine(s, n, 'a'))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -704,18 +717,21 @@
       "3\n",
       "101110\n",
       "2\n",
-      "111011\n",
+      "['1', '1', '1', '0', '1', '1']\n",
       "01\n",
       "1\n",
-      "10\n",
+      "['1', '0']\n",
       "110\n",
       "1\n",
-      "-1\n"
+      "-1\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "#Задача 6\n",
+    "\n",
+    "import math\n",
     "\n",
     "def solve(s, x):\n",
     "    n = len(s)\n",
@@ -736,20 +752,22 @@
     "            print('-1')                                    #строки не существует\n",
     "            return\n",
     "    \n",
-    "    print(''.join(res))\n",
+    "    return(res)\n",
     " \n",
     " \n",
     "t = int(input())\n",
     "\n",
     "for i in range(t):\n",
+    "    assert 1 <= t <= 1000, \"Введено недопустимое значение\"\n",
+    "        \n",
     "    s = input()\n",
     "    x = int(input())\n",
-    "    solve(s, x)\n"
+    "    print(solve(s, x))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +783,7 @@
    "source": [
     "#Задача 7\n",
     "\n",
-    "import heapq                 #куча\n",
+    "import heapq                          #куча\n",
     " \n",
     "def healthPoint(i, num):\n",
     "    count = 0                         #счётчик значения здоровья\n",
@@ -780,17 +798,22 @@
     "            count -= poison                  #вычитаем из здорья показатели яда\n",
     "            total -= 1                       #и удаляем банку\n",
     "    \n",
-    "    print(total)\n",
+    "    return(total)\n",
     " \n",
-    " \n",
+    "\n",
     "n = int(input())\n",
+    "assert 2 < n < 2000, \"Введено недопустимое значение\"\n",
+    "\n",
     "a = list(map(int, input().split()))\n",
-    "healthPoint(n-1, 0)"
+    "assert 0 < max(a) < 100**9, \"Введено недопустимое значение\"\n",
+    "assert -100**9 < min(a) < 0, \"Введено недопустимое значение\"\n",
+    "\n",
+    "print(healthPoint(n-1, 0))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -821,9 +844,11 @@
     "\n",
     "\n",
     "t = int(input())\n",
+    "assert 1 < t < 1000, \"Введено недопустимое значение\"\n",
     "\n",
     "for i in range(t):    \n",
     "    n = int(input())\n",
+    "    assert 1 <= n <= 2000, \"Введено недопустимое значение\"\n",
     "    arr = list(map(int,input().split()))\n",
     "    c = 0\n",
     "    m = [0]*(n+1)\n",
@@ -848,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -865,8 +890,13 @@
     "#Задача 9\n",
     "\n",
     "n = int(input())\n",
+    "assert 1 <= n <= 100**9, \"Введено недопустимое значение\"\n",
+    "\n",
     "a = list(map(int, input().split()))\n",
-    " \n",
+    "\n",
+    "assert 1 <= max(a) <= 10**9, \"Введено недопустимое значение\"\n",
+    "assert 1 <= min(a) <= 10**9, \"Введено недопустимое значение\"\n",
+    "\n",
     "summa = sum(a)\n",
     "if max(a) <= summa and summa % 2 == 0:           #условие выполняется, в случае если максимальный элемент\n",
     "    print('YES')                                 #меньше или равен сумме введённых цифр и если сумма цифр - чётное число\n",
@@ -876,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -892,6 +922,7 @@
     "#Задача 10\n",
     "\n",
     "n = int(input())\n",
+    "assert 1 <= n <= 100**7, \"Введено недопустимое значение\"\n",
     "mod = int(1e9+7)        #модуль\n",
     "\n",
     "D = 1\n",
@@ -904,13 +935,6 @@
     "                                        #+ количество способов попасть за n-1 ход из D в D.\n",
     "print(D)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
